Added chapter and page.

--- a/src/main/resources/guide-html5.vm
+++ b/src/main/resources/guide-html5.vm
@@ -18,7 +18,13 @@
 #end
 </head>
 <body>
+#foreach ($chapter in $guide.chapters)
   <article>
+#foreach ($page in $chapter.pages)
+    <section id="$page.id">
+    </section>
+#end  
   </article>
+#end  
 </body>
 </html>
