--- a/src/main/resources/guide-html5.vm
+++ b/src/main/resources/guide-html5.vm
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>$!guide.title</title>
-  <meta name="application-name" content="GuideMe-v1">
   <meta name="author" content="$!guide.authorName">
   <meta name="keywords" content="$!guide.keywordsString">
   <meta name="description" content="$!guide.description">
@@ -19,11 +18,24 @@
 </head>
 <body>
 #foreach ($chapter in $guide.chapters)
-  <article>
-#foreach ($page in $chapter.pages)
-    <section id="$page.id">
+  <article class="chapter">
+    #foreach ($page in $chapter.pages)
+    <section id="$page.id" class="page">
+      #if ($page.text)
+      <div class="text">
+        $page.text
+      </div>
+      #end
+      #if ($page.buttons.size() > 0)
+      <div class="buttons">
+        #foreach ($button in $page.buttons)
+        <button #if ($button.target)data-goto="#$button.target"#end>$button.text</button>
+        #end        
+      </div>
+      #end    
     </section>
-#end  
+    
+    #end  
   </article>
 #end  
 </body>
