Minor refactoring (renaming VisualElement to Cover).

--- a/guideme.core/src/org/guideme/guideme/filesupport/GuideCover.form
+++ b/guideme.core/src/org/guideme/guideme/filesupport/GuideCover.form
@@ -43,7 +43,7 @@
     <Component class="javax.swing.JButton" name="playButton">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/guideme/guideme/filesupport/Bundle.properties" key="GuideMeVisualElement.playButton.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+          <ResourceString bundle="org/guideme/guideme/filesupport/Bundle.properties" key="GuideCover.playButton.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
       </Properties>
       <Events>
@@ -53,7 +53,7 @@
     <Component class="javax.swing.JTextField" name="titleField">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/guideme/guideme/filesupport/Bundle.properties" key="GuideMeVisualElement.titleField.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+          <ResourceString bundle="org/guideme/guideme/filesupport/Bundle.properties" key="GuideCover.titleField.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
       </Properties>
     </Component>
